--- a/src/components/UI/input/Input.module.scss
+++ b/src/components/UI/input/Input.module.scss
@@ -1,8 +1,8 @@
 .Input {
     padding: 6px 15px;
-    min-width: 500px;
+    width: 100vh;
     background-color: rgb(66,66,66);
-    border-radius: 10px;
+    border-radius: 6px;
     border: 1px solid rgba(255, 255, 255, 0.10);
     color: rgba(255, 255, 255, 0.600);
 
