--- a/src/components/UI/List/List.module.scss
+++ b/src/components/UI/List/List.module.scss
@@ -1,7 +1,11 @@
 .List {
+    width: 100%;
+    min-height: 20px;
     padding: 10px 15px;
     color: rgba(255, 255, 255, 0.600);
     border-bottom: 1px solid;
+    list-style-type: none;
+    background-color: rgba(66,66,66);
     &:hover {
         color: white;
         transition: 0.300s;
