--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -2,7 +2,10 @@
     padding: 5px 15px;
     border: 2px solid rgb(54, 124, 150);;
     cursor: pointer;
-    width: 100%;
+    min-height: 20px;
+    min-width: 120px;
+    color: rgba(255, 255, 255, 0.600);
+    
 
     &:hover {
         background-color: rgb(54, 124, 150);
