--- a/src/components/UI/input/Input.module.scss
+++ b/src/components/UI/input/Input.module.scss
@@ -1,6 +1,6 @@
 .Input {
     padding: 6px 15px;
-    width: 100vh;
+    width: 100%;
     background-color: rgb(66,66,66);
     border-radius: 6px;
     border: 1px solid rgba(255, 255, 255, 0.10);
