--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -1,15 +1,14 @@
 .Button {
     padding: 5px 15px;
-    border: 2px solid rgb(54, 124, 150);;
+    border: 2px solid rgba(255,255,255,0.40);;
     cursor: pointer;
     min-height: 20px;
     min-width: 120px;
-    color: rgba(255, 255, 255, 0.600);
+    color: rgba(255,255,255,0.40);
     
-
     &:hover {
-        background-color: rgb(54, 124, 150);
+        background-color: rgba(255,255,255,0.40);
         transition: 0.3s;
-        color: rgb(255,255,255);
+        color: black;
     }
 }
