--- a/src/components/UI/input/Input.module.scss
+++ b/src/components/UI/input/Input.module.scss
@@ -1,10 +1,12 @@
 .Input {
+    min-height: 50px;
     padding: 6px 15px;
     width: 100%;
     background-color: rgb(66,66,66);
     border-radius: 6px;
     border: 1px solid rgba(255, 255, 255, 0.10);
     color: rgba(255, 255, 255, 0.600);
+    font-size: 20px;
 
     &:focus {
         outline: none;
